Modified to save number with Contacts Manager

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">PhoneDialer</string>
+
+    <string name="phone_error">Must have a number typed to start the Contact Manager!</string>
 </resources>
